constraints/etc-k8smemoryrequestequalslimit-samples-container-must-request-limit-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sMemoryRequestEqualsLimit
metadata:
  name: container-must-request-limit
spec:
  enforcementAction: warn
  match:
    excludedNamespaces:
      - config-management-monitoring
      - config-management-system
      - kube-system
      - resource-group-system
